# esp32-hub75

./: .gitignore  README.md  pyproject.toml  run.sh
doc/: memory.md  pinout.md  schematic.md  sequenceDiagram.md
src/: animation.py  blink.py  cached_pin.py  chars.py  hub75.py  letters.py  main.py  matrixdata.py  timernative.py
tests/: alternatives.py  chrono.py  comprehension.py  cprofile.py  cprofile_demo.py  line_profile_test.py  line_profiler_demo.py  matrixdata.py  test_matrixdata.py  test_message_loop.py  timeit_demo.py
