[tool.poetry]
name = "esp32-hub75"
version = "0.1.0"
description = ""
authors = ["Stef <stef.dev.49@gmail.com>"]
readme = "README.md"

packages = [{include="src", from="."}]

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^11.1.0"
numpy = "^2.2.3"
line-profiler = "^4.2.0"


[tool.poetry.group.dev.dependencies]
mpremote = "^1.24.1"
esptool = "^4.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
